--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,32 +11,34 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+  <form>
+    <div class="field">
+      <%= form.label :title %>
+      <%= form.text_field :title, class:"form-control"%>
+    </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+    <div class="field">
+      <%= form.label :description %>
+      <%= form.text_area :description, class:"form-control" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :qty %>
-    <%= form.number_field :qty %>
-  </div>
+    <div class="field">
+      <%= form.label :qty %>
+      <%= form.number_field :qty, class:"form-control" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :qty_reserved %>
-    <%= form.number_field :qty_reserved %>
-  </div>
+    <div class="field">
+      <%= form.label :qty_reserved %>
+      <%= form.number_field :qty_reserved, class:"form-control" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :image_link %>
-    <%= form.text_area :image_link %>
-  </div>
+    <div class="field">
+      <%= form.label :image_link %>
+      <%= form.text_area :image_link, class:"form-control" %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="actions">
+      <%= form.submit class:"btn btn-dark text-white"%>
+    </div>
+  </form>
 <% end %>
