--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<div class="btn-group">
+  <%= link_to 'Show', @product, class:"btn btn-primary text-white" %>
+  <%= link_to 'Back', products_path, class:"btn btn-secondary text-white" %>
+</div>
