--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Products</h1>
 
-<table>
-  <thead>
+<table class="table table-striped border">
+  <thead class="bg-dark text-white">
     <tr>
       <th>Title</th>
       <th>Description</th>
@@ -22,9 +22,11 @@
         <td><%= product.qty %></td>
         <td><%= product.qty_reserved %></td>
         <td><%= product.image_link %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="btn-group">
+          <%= link_to 'Show', product, class:"btn btn-primary text-white" %>
+          <%= link_to 'Edit', edit_product_path(product), class:"btn btn-secondary text-white" %>
+          <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger text-white" %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'New Product', new_product_path, class:"btn btn-dark text-white" %>
