--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,11 +22,13 @@
         <td><%= product.qty %></td>
         <td><%= product.qty_reserved %></td>
         <td><%= product.image_link %></td>
-        <td class="btn-group">
-          <%= link_to 'Show', product, class:"btn btn-primary text-white" %>
-          <%= link_to 'Edit', edit_product_path(product), class:"btn btn-secondary text-white" %>
-          <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger text-white" %>
-        </td>
+        <% if user_signed_in? %>
+          <td class="btn-group">
+            <%= link_to 'Show', product, class:"btn btn-primary text-white" %>
+            <%= link_to 'Edit', edit_product_path(product), class:"btn btn-secondary text-white" %>
+            <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger text-white" %>
+          </td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
