Added new UI finishes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,290 @@
  *= require_tree .
  *= require_self
  */
+ @import "font-awesome";
+
+html{
+    scroll-behavior: smooth;
+    font-size: 62.5%;
+    --font-size-small: 1.2rem;
+    --font-size-regular: 1.6rem;
+    --font-size-large: 2.4rem;
+    --font-size-xlarge: 3.6rem;
+
+    --primary-color1: rgb(255, 255, 255);
+    --primary-color2: rgb(217, 128, 56);
+    --primary-color2-alpha: rgba(217, 128, 56, 0.5);
+    --secondary-color1: rgb(0, 0, 0);
+    --secondary-color2: rgb(250, 235, 215);
+    --color-clear: rbga(0, 0, 0, 0);
+}
+
+body{
+    font-size: var(--font-size-regular);
+}
+
+nav{
+    box-shadow: 1px 1px 3px var(--primary-color2-alpha);
+}
+
+nav li.nav-item{
+    margin: 1rem 0.2rem;
+}
+
+nav a{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: var(--font-size-regular);
+}
+
+.logo img{
+    height: 5rem;
+}
+
+.logo:hover{
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+a.navbar-link{
+    text-decoration: none;
+    padding: 0.4rem;
+    color: var(--secondary-color1);
+}
+
+a.navbar-link:hover{
+    color: var(--primary-color2) !important;
+    background-color: rgba(0, 0, 0, 0);
+    text-decoration: underline;
+}
+
+.show{
+    background-color: rgba(0, 0, 0, 0) !important;
+}
+
+header{
+    text-align: center;
+    margin: 4rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 0.3rem;
+    font-size: var(--font-size-large);
+}
+
+li.nav-item{
+    padding: 0 0.5rem;
+}
+
+.primary-bg1{
+    background-color: var(--primary-color1);
+}
+
+.primary-bg2{
+    background-color: var(--primary-color2);
+}
+
+.filtered-background{
+    height: calc(100svh - 11rem);
+    width: 100vw;
+    /*filter: grayscale(100%) blur(2px);*/
+    background: linear-gradient(teal, navy);
+    position: relative;
+}
+
+.filtered-background img{
+    opacity: 0.7;
+    object-fit: fill;
+    height: inherit;
+    width: inherit;
+    filter: blur(5px);
+}
+
+.filtered-background .center-text{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: var(--font-size-xlarge);
+    color: var(--primary-color1);
+    text-shadow: 0px 0px 5px var(--primary-color2), 1px 1px 1px var(--secondary-color1), -1px -1px 1px var(--secondary-color1);
+    line-height: 4rem;
+    user-select: none;
+}
+
+.filtered-background .bottom-text{
+    padding: 0.4rem 1rem;
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translate(-50%, -115%);
+    font-size: var(--font-size-regular);
+    color: var(--primary-color1);
+    text-shadow: 0 0 7px var(--secondary-color1);
+    line-height: 4rem;
+    user-select: none;
+    text-decoration: none;
+    border: 1px solid var(--primary-color1);
+    background-color: var(--primary-color2);
+    border-radius: 10px;
+}
+
+.google-maps{
+    align-items: center;
+    text-align: center;
+    margin: 2rem 0;
+}
+
+.products{
+    border: 1px solid var(--primary-color2);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin: 0;
+}
+
+.products .row{
+    height: 30rem;
+    width: 90%;
+    box-sizing: border-box;
+    margin: 2rem 0;
+    padding: 1rem 0.5rem;
+    box-shadow: -1px 0px 5px var(--secondary-color1);
+    background-color: var(--secondary-color2);
+}
+
+.product-image{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    justify-self: center;
+    text-align: center;
+}
+
+.product-image img{
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    border: 1px solid black;
+    border-radius: 20px;
+    box-shadow: -1px 0px 3px var(--secondary-color1);
+}
+
+.products .left-col{
+    overflow: hidden;
+    height: 95%;
+}
+
+.products .left-col .no-image{
+    text-align: center;
+    border: 1px solid black;
+    height: 100%;
+    padding: 11rem 0;
+}
+
+.products .right-col{
+    padding: 1rem;
+    font-size: var(--font-size-regular);
+    position: relative;
+    height: inherit;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.right-col .product-title{
+    text-align: center;
+    text-shadow: -1px 0px 1px var(--secondary-color1);
+    padding: 0.5rem;
+    font-size: var(--font-size-large);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    white-space: nowrap;
+    width: 100%;
+    display: inline;
+}
+
+.products .right-col .btn-group{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translate(10%, -50%);
+}
+
+.products .product-description{
+    overflow: scroll;
+    height: 33%;
+}
+
+.product-form{
+    margin: 3rem;
+}
+
+footer{
+    box-shadow: 1px -2px 3px var(--primary-color2-alpha);
+    margin: 2rem 0rem;
+    background-color: var(--primary-color1);
+    text-align: center;
+    padding-top: 3.5rem;
+}
+
+footer .container{
+    padding: 2rem;
+}
+
+footer p{
+    display: block;
+    width: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: var(--font-size-regular);
+}
+
+footer .col-md-4{
+    margin: 2rem 0;
+}
+
+.fa{
+    padding: 0.1rem;
+    width: 4rem;
+    font-size: var(--font-size-large);
+    text-decoration: none;
+}
+
+a.fa:hover{
+    background-color: var(--color-clear);
+}
+
+@keyframes slide-in {
+    0%{
+        transform: translate(-100%);
+        opacity: 0;
+    }
+    50%{
+        transform: translate(0%);
+        opacity: 1;
+        color: var(--secondary-color1);
+        text-decoration: none;
+    }
+    100%{
+        color: var(--primary-color2);
+    }
+}
+
+.contact{
+    animation: slide-in 3s forwards;
+}
+
+.contact a{
+    color: inherit;
+    text-decoration: none;
+    pointer-events: none;
+}
+
+.contact a:hover{
+    background-color: inherit;
+}
+
+@media only screen and (min-width: 768px){
+    #navbarNav{
+        box-shadow: none;
+    }
+}
