--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Product</h1>
+<div class="product-form">
+    <header>New Product</header>
 
-<%= render 'form', product: @product %>
+    <%= render 'form', product: @product %>
 
-<%= link_to 'Back', products_path, class:"btn btn-secondary text-white" %>
+    <%= link_to 'Back', products_path, class:"btn btn-secondary text-white" %>
+</div>
