--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,24 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= favicon_link_tag 'bky_lighting.ico' %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/5f6e0d4df0.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="mx-5">
-    <p class="navbar-text float-right">
-      <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-        <%= link_to 'Logout', destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
-      <% else %>
-        <%= link_to 'Sign up', new_user_registration_path, :class => 'navbar-link' %>
-        <%= link_to 'Login', new_user_session_path, :class => 'navbar-link' %>
-      <% end %>
-    </p>
+  <body>
+    <%= render partial: 'home/navbar' %>
     <p class='notice'><%= notice %></p>
     <p class='alert'><%= alert %></p>
     <%= yield %>
+    <%= render partial: 'home/footer' %>
   </body>
 </html>
