--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,39 +1,36 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Products</h1>
-
-<table class="table table-striped border">
-  <thead class="bg-dark text-white">
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Qty</th>
-      <th>Qty reserved</th>
-      <th>Image link</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.qty %></td>
-        <td><%= product.qty_reserved %></td>
-        <td><%= product.image_link %></td>
+<header>
+  <h1>Products</h1>
+</header>
+<div class="container-lg products">
+  <% @products.each do |product| %>
+    <div class="row">
+      <div class="col-6 left-col">
+        <% if product.image.attached? %>
+          <div class="product-image"><%= image_tag product.image %></div>
+        <% else %>
+          <div class="no-image">
+            <i class="fa fa-chain-broken fa-5x" style:"height:inherit;width:inherit;"></i>
+          </div>
+        <% end %>
+      </div>
+      <div class="col-6 right-col">
+        <div class="product-title"><%= product.title %></div>
+        Description:
+        <div class="product-description">
+          <div class="description-text"><br><%= product.description%></div>
+        </div><br>
+        <div class="product-qty">In Stock: <%= product.qty %></div>
         <% if user_signed_in? %>
-          <td class="btn-group">
+          <div class="btn-group">
             <%= link_to 'Show', product, class:"btn btn-primary text-white" %>
             <%= link_to 'Edit', edit_product_path(product), class:"btn btn-secondary text-white" %>
             <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger text-white" %>
-          </td>
+          </div>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+      </div>
+    </div>
+  <% end %>
+  <%= link_to 'New Product', new_product_path, class:"btn btn-dark text-white", style:"margin: 1rem" %>
+</div>
 <br>
-
-<%= link_to 'New Product', new_product_path, class:"btn btn-dark text-white" %>
