--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,28 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<div class="show">
-  <p>
-    <strong>Title:</strong>
-    <%= @product.title %>
-  </p>
+<div class="product-form">  
+  <div class="show">
+    <p>
+      <strong>Title:</strong>
+      <%= @product.title %>
+    </p>
 
-  <p>
-    <strong>Description:</strong>
-    <%= @product.description %>
-  </p>
+    <p>
+      <strong>Description:</strong>
+      <%= @product.description %>
+    </p>
 
-  <p>
-    <strong>Qty:</strong>
-    <%= @product.qty %>
-  </p>
+    <p>
+      <strong>Qty:</strong>
+      <%= @product.qty %>
+    </p>
 
-  <p>
-    <strong>Qty reserved:</strong>
-    <%= @product.qty_reserved %>
-  </p>
-</div>
-<br>
-<div class="btn-group">
-  <%= link_to 'Edit', edit_product_path(@product), class:"btn btn-primary text-white" %>
-  <%= link_to 'Back', products_path, class:"btn btn-secondary text-white" %>
+    <p>
+      <strong>Qty reserved:</strong>
+      <%= @product.qty_reserved %>
+    </p>
+
+    <% if @product.image.attached? %>
+      <%= image_tag @product.image, style:"width:20rem; display:block;" %>
+    <% end %>
+  </div>
+  <br>
+  <div class="btn-group">
+    <%= link_to 'Edit', edit_product_path(@product), class:"btn btn-primary text-white" %>
+    <%= link_to 'Back', products_path, class:"btn btn-secondary text-white" %>
+  </div>
 </div>
