--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,8 +27,12 @@
     <% end %>
   </div>
   <br>
-  <div class="btn-group">
-    <%= link_to 'Edit', edit_product_path(@product), class:"btn btn-primary text-white" %>
+  <% if user_signed_in? %>
+    <div class="btn-group">
+      <%= link_to 'Edit', edit_product_path(@product), class:"btn btn-primary text-white" %>
+      <%= link_to 'Back', products_path, class:"btn btn-secondary text-white" %>
+  <% else %>
     <%= link_to 'Back', products_path, class:"btn btn-secondary text-white" %>
+  <% end %>
   </div>
 </div>
